--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/cli.js",
   "type": "module",
   "scripts": {
-    "build": "npx esbuild src/cli.js --bundle --platform=node --format=cjs --outfile=dist/bundled.js"
+    "build": "node build.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,7 @@
     "fast-xml-parser": "^4.3.2"
   },
   "devDependencies": {
-    "esbuild": "0.20.1"
+    "esbuild": "0.20.1",
+    "postject": "^1.0.0-alpha.6"
   }
 }
